--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/social-media-demo-db?useSSL=false&serverTimezone=UTC
-    username: root
-    password: password
+    # TODO: extract into secret management solution
+    url: jdbc:mysql://localhost:3306/social_media_demo_db?useSSL=false&serverTimezone=UTC
+    username: nick
+    password: ASDFlkj1234!@#$
   jpa:
     hibernate:
       ddl-auto: update # should be "validate" for PROD
-    show-sql: true
+    show-sql: false
 
 logging:
   level:
-    org:
-      springframework:
-        security: DEBUG
+    com.nickesqueda: INFO
+    org.springframework.security: INFO
